[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "*"
numpy = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
matplotlib = "*"
numpy = "*"
ruff = "*"
streamlit = "*"
